Fix chat scroll

--- a/discode-web/src/app/home/home.component.html
+++ b/discode-web/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col side-nav bg-discode-darker  d-flex" data-bs-spy="scroll">
-        <div class="d-flex-row new-chat-container"> 
+        <div class="d-flex-row new-chat-container">
             <button type="button" class="btn btn-primary btn-discode-dark create-chat" (click)="openModal()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" viewBox="0 0 16 16">
                     <path
@@ -13,18 +13,22 @@
         <span class="chats d-flex">
             <div *ngFor="let chat of chatList" class="d-flex-row">
                 <button type="button" class="chat-icon btn" (click)="chatClick(chat.chatId, chat.chatName)">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
-                        <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                        <path fill-rule="evenodd" d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"/>
-                        <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
-                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-people-fill" viewBox="0 0 16 16">
+                        <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                        <path fill-rule="evenodd"
+                            d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z" />
+                        <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
+                    </svg>
                 </button>
                 <div class="chat-link" (click)="chatClick(chat.chatId, chat.chatName)">
                     {{chat.chatName}}
                 </div>
                 <div class="chat-leave-icon" (click)="leaveChat(chat.chatId!!)">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-x"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
                     </svg>
                 </div>
             </div>
@@ -32,30 +36,35 @@
     </div>
     <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
         <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Create new chat</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="onCloseHandled()"></button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Create new chat</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                        (click)="onCloseHandled()"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-discode-blue" [formGroup]="createChatFormGroup">
+                        <div class="mb-4 border-primary">
+                            <label class="form-label">Name</label>
+                            <input type="text" id="chatName" placeholder="Chat name" class="form-control"
+                                formControlName="chatName" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-discode-dark" data-bs-dismiss="modal"
+                        (click)="onCloseHandled()">Cancel</button>
+                    <button type="button" class="btn btn-primary btn-discode-green"
+                        [disabled]="this.createChatFormGroup.invalid" (click)="createChat()">Create</button>
+                </div>
             </div>
-            <div class="modal-body">
-                <form class="form-discode-blue" [formGroup]="createChatFormGroup">
-                    <div class="mb-4 border-primary">
-                      <label class="form-label">Name</label>
-                      <input type="text" id="chatName" placeholder="Chat name" class="form-control" formControlName="chatName" />
-                    </div>
-                  </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary btn-discode-dark" data-bs-dismiss="modal" (click)="onCloseHandled()">Cancel</button>
-              <button type="button" class="btn btn-primary btn-discode-green" [disabled]="this.createChatFormGroup.invalid" (click)="createChat()">Create</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
     <div class="col chat-room-container">
-        <app-chat-room *ngIf="isChatSelected" [chatId]="chatId" [chatName]="selectedChat" [chatMembers]="chatMembers" [messages]="messages"></app-chat-room>
+        <app-chat-room *ngIf="isChatSelected" [chatId]="chatId" [chatName]="selectedChat" [chatMembers]="chatMembers"
+            [messages]="messages"></app-chat-room>
         <div *ngIf="!isChatSelected" class="center">
-            <img src="assets/welcome_cats.svg" alt="welcome">  
+            <img src="assets/welcome_cats.svg" alt="welcome">
         </div>
     </div>
 </div>
