--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -5,7 +5,8 @@
             {{chatName}}
         </div>
     </button>
-    <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1" class="bg-discode-darker" *ngIf="isAlreadyMember(userId) === 'OWNER'">
+    <ul ngbDropdownMenu aria-labelledby="dropdownMenuButton1" class="bg-discode-darker"
+        *ngIf="isAlreadyMember(userId) === 'OWNER'">
         <li><a class="menu-list" ngbDropdownItem (click)="openAddMemberModal()">Add member</a></li>
         <li><a class="menu-list" ngbDropdownItem (click)="openDeleteMemberModal()">Remove member</a></li>
         <li><a class="menu-list" ngbDropdownItem (click)="deleteChat()">Delete chat</a></li>
@@ -79,16 +80,17 @@
             <app-message *ngFor="let message of messages" [message]="message" [languages]="languages!"></app-message>
         </div>
         <div class="d-flex chat-room-members bg-discode-darker">
-            <div *ngFor="let member of chatMembers" class="chat-room-member"> 
+            <div *ngFor="let member of chatMembers" class="chat-room-member">
                 <div *ngIf="member.status !== 'LEFT'">
                     <span class="chat-room-member-tooltip">
                         {{member.firstName}} {{member.lastName}}
                     </span>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-person-fill" viewBox="0 0 16 16">
+                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                     </svg>
                     {{member.username}}
-                    <br/>
+                    <br />
                 </div>
             </div>
         </div>
@@ -98,7 +100,7 @@
         <form class="form-discode-blue send-message-form" role="sendMessage" [formGroup]="messageFormGroup">
             <div class="mb-4 border-primary message-box">
                 <textarea name="sendMessage" rows="3" cols="60" name="message" class="form-control" placeholder="..."
-                    style="resize: none;" formControlName="message" (keyup.enter) = "sendMessage()"></textarea>
+                    style="resize: none;" formControlName="message" (keyup.enter)="sendMessage()"></textarea>
             </div>
 
             <div class="d-flex">
