--- a/discode-web/src/app/home/message/message.component.html
+++ b/discode-web/src/app/home/message/message.component.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div *ngIf="!isCode()" class="message-content">
-                {{message?.content}}
+                <pre>{{message?.content}}</pre>
             </div>
         </div>
     </div>
