Update frontend layout

--- a/discode-web/src/app/home/home.component.html
+++ b/discode-web/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row home-page-container">
     <div class="col side-nav bg-discode-darker  d-flex" data-bs-spy="scroll">
         <div class="d-flex-row new-chat-container">
             <button type="button" class="btn btn-primary btn-discode-dark create-chat" (click)="openModal()">
