--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -97,17 +97,16 @@
     </div>
 
     <div class="d-flex chat-room-input-box bg-discode-darkest">
-        <form class="form-discode-blue send-message-form" role="sendMessage" [formGroup]="messageFormGroup">
-            <div class="mb-4 border-primary message-box">
+        <form class="form-discode-blue send-message-form d-flex-row align-items-center" role="sendMessage" [formGroup]="messageFormGroup">
+            <div class="message-box d-flex-row align-items-center">
                 <textarea name="sendMessage" rows="1" cols="60" name="message" class="form-control" placeholder="..."
                     style="resize: none;" formControlName="message" (keyup.enter)="sendMessage()"></textarea>
             </div>
 
-            <div class="d-flex">
+            <div class="d-flex align-items-center">
                 <button class="btn btn-primary btn-block" (click)="openCodeModal()">Code</button>
             </div>
         </form>
-
     </div>
 </div>
 
