--- a/discode-web/src/app/home/chat-room/chat-room.component.scss
+++ b/discode-web/src/app/home/chat-room/chat-room.component.scss
@@ -1,8 +1,7 @@
-@import 'src/colors.scss';
+@import "src/colors.scss";
 
 .chat-room-div {
-    height: 90%;
-    padding-right: 10px;
+    height: 87vh;
 }
 
 .chat-room-div > div,
@@ -11,8 +10,8 @@
 }
 
 .chat-room-top-div {
-    height: 85%;
-    max-height: 85%;
+    height: 90%;
+    max-height: 90%;
     min-width: 100%;
     margin-bottom: 10px;
 }
@@ -41,7 +40,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        
+
         .chat-room-member-tooltip {
             visibility: hidden;
             white-space: nowrap;
@@ -61,7 +60,6 @@
         }
     }
 
-
     .chat-room-member:hover {
         background-color: $discode-dark;
         color: white;
@@ -77,6 +75,7 @@
     min-width: 100%;
     height: 0px;
     text-align: center;
+
 }
 
 .chat-title {
@@ -87,6 +86,7 @@
     button {
         width: fit-content;
         max-width: 30%;
+        height: 5vh;
     }
 
     .chat-title-content {
@@ -124,18 +124,23 @@ hr.solid {
 }
 
 .send-message-form {
-    display: flex;
-
     .message-box {
         width: 90%;
+        padding: 0;
+        
+        textarea {
+            padding-top: 0.5em;
+            padding-bottom: 0;
+        }
     }
 
-    div > button {
-        height: 40px;
-        width: 130px;
-        margin-left: 15px;
-        margin-top: 0px;
-        margin-bottom: 5px;
+    div {
+        width: 10%;
+        button {
+            max-height: 4vh !important;
+            height: 4vh !important;
+            width: 5vw !important;
+        }
     }
 }
 
@@ -144,7 +149,7 @@ hr.solid {
     padding: 0 !important;
     width: 50%;
     height: 47%;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 4px;
