--- a/discode-web/src/app/home/message/message.component.scss
+++ b/discode-web/src/app/home/message/message.component.scss
@@ -70,9 +70,11 @@ li .menu-list{
 .message-profile-pic {
     width: 100%;
     height: 100%;
-    float: left;
     max-width: 60px;
+    max-height: 60px;
     margin-right: 20px;
+    border-radius: 4px;
+    float: left;
 }
 
 .message-info>span {
@@ -88,7 +90,6 @@ li .menu-list{
     max-height: 400px;
     min-width: 600px;
     max-width: 65vw;
-
 }
 
 .code-content {
