Fix some frontend bug and add docker deploy script

--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -14,7 +14,7 @@
     <hr class="solid">
 </div>
 
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':deleteMemberModalDisplay}">
+<div class="modal chat-options-modal" tabindex="-1" role="dialog" [ngStyle]="{'display':deleteMemberModalDisplay}">
     <div class=" modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
@@ -37,7 +37,7 @@
     </div>
 </div>
 
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':addMemberModalDisplay}">
+<div class="modal chat-options-modal" tabindex="-1" role="dialog" [ngStyle]="{'display':addMemberModalDisplay}">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
