--- a/discode-web/src/app/home/chat-room/chat-room.component.scss
+++ b/discode-web/src/app/home/chat-room/chat-room.component.scss
@@ -144,6 +144,10 @@ hr.solid {
     }
 }
 
+.chat-options-modal {
+    margin-top: 10vh;
+}
+
 .code-modal {
     position: absolute;
     padding: 0 !important;
