--- a/discode-web/src/app/home/home.component.scss
+++ b/discode-web/src/app/home/home.component.scss
@@ -1,5 +1,9 @@
 @import "src/colors.scss";
 
+.create-chat-modal {
+    margin-top: 10vh;
+}
+
 .home-page-container {
     position: fixed;
     top: 7vh;
