--- a/discode-web/src/app/home/message/message.component.scss
+++ b/discode-web/src/app/home/message/message.component.scss
@@ -75,6 +75,7 @@ li .menu-list{
     margin-right: 20px;
     border-radius: 4px;
     float: left;
+    object-fit: contain;
 }
 
 .message-info>span {
