--- a/discode-web/src/app/home/home.component.html
+++ b/discode-web/src/app/home/home.component.html
@@ -34,7 +34,7 @@
             </div>
         </span>
     </div>
-    <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
+    <div class="modal create-chat-modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
