--- a/discode-web/src/app/home/message/message.component.html
+++ b/discode-web/src/app/home/message/message.component.html
@@ -7,13 +7,10 @@
             class="message-profile-pic">
         <div>
             <div class="d-flex-row message-info">
-                <span class="username">{{message?.author?.username}}</span>
+                <div class="username">{{message?.author?.username}}</div>
                 <span class="divider">|</span>
                 <span class="message-time">{{transform(message?.creationDate!!)}}</span>
                 <span *ngIf="message?.author?.userId != userId" class="report" (click)="openModal()">Report</span>
-                <div *ngIf="isCode()">
-
-                </div>
             </div>
             <div *ngIf="isCode()">
                 <pre class='code-window code-content'><code [highlight]="code!"></code></pre>
