--- a/discode-web/src/app/shared/components/header/header.component.html
+++ b/discode-web/src/app/shared/components/header/header.component.html
@@ -1,19 +1,19 @@
 <nav class="bg-discode-darkest flex discode-header align-items-center">
     <a href="/home">
-        <img class="m-2" src="assets/logo-dark.png" alt="" />
+        <img src="assets/logo-dark.png" alt="" />
     </a>
 
     <span class="right-span align-items-center d-flex-row" *ngIf="isAuthenticated">
         <a href="/profile">
-            <button type="button" class="m-2 btn btn-primary btn-floating btn-discode-dark">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+            <button type="button" class="btn btn-primary btn-floating btn-discode-dark">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                   </svg>
             </button>
         </a>
 
-        <button type="button" class="m-2 btn btn-primary btn-floating btn-discode-dark" (click)="logout()">
+        <button type="button" class="btn btn-primary btn-floating btn-discode-dark" (click)="logout()">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
