--- a/discode-web/src/app/home/chat-room/chat-room.component.html
+++ b/discode-web/src/app/home/chat-room/chat-room.component.html
@@ -119,7 +119,7 @@
 <div class="modal code-modal" tabindex="-1" role="dialog" [ngStyle]="{'display':codeModalDisplay }">
     <div class="modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
-            <div class="modal-body">
+            <div class="modal-body d-flex align-items-center">
                 <ngx-codemirror name="code" id="code" [(ngModel)]="codeMessage" [options]="{
                         lineWrapping: false,
                         theme: 'material-palenight',
