Fix long messages

--- a/discode-web/src/app/home/message/message.component.html
+++ b/discode-web/src/app/home/message/message.component.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div *ngIf="!isCode()" class="message-content">
-                <pre>{{message?.content}}</pre>
+                {{message?.content}}
             </div>
         </div>
     </div>
