Add message content in report

--- a/discode-web/src/app/home/message/message.component.scss
+++ b/discode-web/src/app/home/message/message.component.scss
@@ -131,10 +131,13 @@ li .menu-list {
     pre {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: medium;
-        white-space: pre-wrap;       /* Since CSS 2.1 */
         white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-        white-space: -pre-wrap;      /* Opera 4-6 */
         white-space: -o-pre-wrap;    /* Opera 7 */
+        white-space: pre-wrap;       /* Since CSS 2.1 */
         word-wrap: break-word;       /* Internet Explorer 5.5+ */
     }
+}
+
+.modal {
+    top: 10%;
 }
